# claude_monitor

./: --output  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_REVIEW_REPORT.md  LICENSE  README.md  config.py  config.yaml  config.yaml.example  diagnostic.py  install.sh  monitor.py  plan.md  pyproject.toml  requirements.txt  restart_server.sh  run.py  state_logger.py  test_e2e.py  test_project_data.py  test_sessions.py  test_state_transitions.py  test_terminal_logging.py  test_tmux.py  test_tmux_logging.py  test_wezterm.py
.claude/: ONBOARDING_PROMPT.md  branch-local-patterns  settings.json  settings.local.json
.claude/commands/: commit-pr-to-main.md  commit-push.md
.claude/rules/: ai-guardrails.md
.github/workflows/: test.yml
data/: headspace.yaml
data/logs/: openrouter.jsonl
data/projects/: claude-monitor.yaml  ot-monitor.yaml  project.yaml.example  raglue.yaml  smac-temp.yaml  talk-to-me.yaml
docs/: claude-code-hooks-settings.json
docs/application/: api-reference.md  architecture.md  conceptual-design.md  configuration.md  index.md  troubleshooting.md  usage.md
docs/architecture/: claude-code-hooks.md
docs/code_review/: 2026-01-24-comprehensive-audit.md  2026-01-24-comprehensive-audit_remediation-plan.md
docs/features/: VOICE_BRIDGE_OUTLINE_PROMPT.md
docs/ideas/: VOICE_BRIDGE_PLAN.md  usage-budget-tracking.md
docs/refactor/: MAJOR_REFACTOR_PROMPT.md  lib-to-src-migration-plan.md
docs/roadmap/: roadmap_e1_ai_powered_focus.md  roadmap_e1_ai_powered_focus_system_prompts.md  roadmap_e1_ai_powered_headspace.md  roadmap_e1_ai_powered_headspace_system_prompts.md
docs/terminal_integration/: README.md  turn-cycle-diagram-tmux.html  turn-cycle-sequence-tmux.md  turn-cycle-specification.md
docs/todo/: todo.md
lib/: __init__.py  compression.py  headspace.py  help.py  iterm.py  logging.py  notifications.py  projects.py  session_sync.py  sessions.py  sse.py  summarization.py  terminal_logging.py  tmux.py  tmux_logging.py
lib/backends/: __init__.py  base.py  tmux.py  wezterm.py  wezterm_hooks.lua
openspec/: project.md
orch/: git_history_analyzer.rb  logger.rb  notifier.rb  orchestrator.rb  prd_validator.rb  queue_manager.rb  state_manager.rb  usage_tracker.rb
orch/commands/: build.rb  finalize.rb  prebuild.rb  prepare.rb  proposal.rb  test.rb  validate_spec.rb
orch/working/: queue.yaml  state.yaml  usage.yaml  z_queue_processed_2026-01-21-1911.yaml
src/: __init__.py  app.py
src/backends/: __init__.py  base.py  iterm.py  tmux.py  wezterm.py  wezterm_hooks.lua
src/models/: __init__.py  agent.py  config.py  headspace.py  inference.py  log_entry.py  project.py  task.py  turn.py
src/routes/: __init__.py  agents.py  config.py  (+8 more)
templates/: index.html  logging.html
tests/: __init__.py  conftest.py  test_agent_store.py  test_api_compatibility.py  test_app.py  test_config_service.py  test_e2e_new_arch.py  test_event_bus.py  test_git_analyzer.py  test_governing_agent.py  test_hook_receiver.py  test_hooks_routes.py  test_inference_service.py  test_integration.py  test_logging_routes.py  test_logging_service.py  test_models.py  test_notification_service.py  test_priority_service.py  test_routes.py  test_setup.py  test_state_interpreter.py  test_task_state_machine.py  test_terminal_logging_service.py  test_tmux_backend.py  test_wezterm_backend.py
wezterm/: README.md  claude_hooks.lua
(+195 files in other folders)
